Prevent gap stopping hover dropdown select

--- a/_sass/minima/custom-styles.scss
+++ b/_sass/minima/custom-styles.scss
@@ -7,6 +7,15 @@
     position: relative;
 }
 
+.site-nav .projects-dropdown::after {
+    content: "";
+    position: absolute;
+    top: 100%;
+    right: 0;
+    width: 100%;
+    height: 8px;
+}
+
 .site-nav .projects-toggle {
     border: 0;
     background: transparent;
